Codi executat knn no NaN

--- a/codi.ipynb
+++ b/codi.ipynb
@@ -319,27 +319,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['time_ctrl', 'time_ext', 'gastos', 'perdidas']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-9-20ef1dae1f47>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     15\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0msklearn\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mimpute\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mKNNImputer\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     16\u001B[0m \u001B[0mimputer\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mKNNImputer\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mn_neighbors\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mcopy\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 17\u001B[0;31m \u001B[0mpd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mDataFrame\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mimputer\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfit_transform\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdf\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcolumns\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mdf\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcolumns\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     18\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     19\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"--- %s seconds ---\"\u001B[0m \u001B[0;34m%\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mtime\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtime\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mstart\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/base.py\u001B[0m in \u001B[0;36mfit_transform\u001B[0;34m(self, X, y, **fit_params)\u001B[0m\n\u001B[1;32m    688\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0my\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    689\u001B[0m             \u001B[0;31m# fit method of arity 1 (unsupervised transformation)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 690\u001B[0;31m             \u001B[0;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mfit_params\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtransform\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    691\u001B[0m         \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    692\u001B[0m             \u001B[0;31m# fit method of arity 2 (supervised transformation)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/impute/_knn.py\u001B[0m in \u001B[0;36mtransform\u001B[0;34m(self, X)\u001B[0m\n\u001B[1;32m    295\u001B[0m             \u001B[0mforce_all_finite\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mforce_all_finite\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    296\u001B[0m             reduce_func=process_chunk)\n\u001B[0;32m--> 297\u001B[0;31m         \u001B[0;32mfor\u001B[0m \u001B[0mchunk\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mgen\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    298\u001B[0m             \u001B[0;31m# process_chunk modifies X in place. No return value.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    299\u001B[0m             \u001B[0;32mpass\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/pairwise.py\u001B[0m in \u001B[0;36mpairwise_distances_chunked\u001B[0;34m(X, Y, reduce_func, metric, n_jobs, working_memory, **kwds)\u001B[0m\n\u001B[1;32m   1614\u001B[0m         \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1615\u001B[0m             \u001B[0mX_chunk\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mX\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0msl\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1616\u001B[0;31m         D_chunk = pairwise_distances(X_chunk, Y, metric=metric,\n\u001B[0m\u001B[1;32m   1617\u001B[0m                                      n_jobs=n_jobs, **kwds)\n\u001B[1;32m   1618\u001B[0m         if ((X is Y or Y is None)\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001B[0m in \u001B[0;36minner_f\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m     70\u001B[0m                           FutureWarning)\n\u001B[1;32m     71\u001B[0m         \u001B[0mkwargs\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mupdate\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m{\u001B[0m\u001B[0mk\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0marg\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0mk\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0marg\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mzip\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msig\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mparameters\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0margs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m}\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 72\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mf\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     73\u001B[0m     \u001B[0;32mreturn\u001B[0m \u001B[0minner_f\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     74\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/pairwise.py\u001B[0m in \u001B[0;36mpairwise_distances\u001B[0;34m(X, Y, metric, n_jobs, force_all_finite, **kwds)\u001B[0m\n\u001B[1;32m   1777\u001B[0m         \u001B[0mfunc\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mpartial\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdistance\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcdist\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmetric\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mmetric\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwds\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1778\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1779\u001B[0;31m     \u001B[0;32mreturn\u001B[0m \u001B[0m_parallel_pairwise\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mY\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfunc\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mn_jobs\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwds\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1780\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1781\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/pairwise.py\u001B[0m in \u001B[0;36m_parallel_pairwise\u001B[0;34m(X, Y, func, n_jobs, **kwds)\u001B[0m\n\u001B[1;32m   1358\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1359\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0meffective_n_jobs\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mn_jobs\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1360\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mfunc\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mY\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwds\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1361\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1362\u001B[0m     \u001B[0;31m# enforce a threading backend to prevent data communication overhead\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001B[0m in \u001B[0;36minner_f\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m     70\u001B[0m                           FutureWarning)\n\u001B[1;32m     71\u001B[0m         \u001B[0mkwargs\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mupdate\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m{\u001B[0m\u001B[0mk\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0marg\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0mk\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0marg\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mzip\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msig\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mparameters\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0margs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m}\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 72\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mf\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     73\u001B[0m     \u001B[0;32mreturn\u001B[0m \u001B[0minner_f\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     74\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/pairwise.py\u001B[0m in \u001B[0;36mnan_euclidean_distances\u001B[0;34m(X, Y, squared, missing_values, copy)\u001B[0m\n\u001B[1;32m    424\u001B[0m     \u001B[0mpresent_X\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;36m1\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mmissing_X\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    425\u001B[0m     \u001B[0mpresent_Y\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mpresent_X\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0mY\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0mX\u001B[0m \u001B[0;32melse\u001B[0m \u001B[0;34m~\u001B[0m\u001B[0mmissing_Y\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 426\u001B[0;31m     \u001B[0mpresent_count\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdot\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mpresent_X\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpresent_Y\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mT\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    427\u001B[0m     \u001B[0mdistances\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mpresent_count\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mnan\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    428\u001B[0m     \u001B[0;31m# avoid divide by zero\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m<__array_function__ internals>\u001B[0m in \u001B[0;36mdot\u001B[0;34m(*args, **kwargs)\u001B[0m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "['time_ctrl', 'time_ext', 'gastos', 'perdidas']\n",
+      "--- 1735.4437606334686 seconds ---\n",
+      "[]\n"
      ]
     }
    ],
@@ -376,8 +358,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   superficie     fecha       lat       lng  latlng_explicit  causa_supuesta  \\\n",
+      "0    0.000093  0.001538  0.949757  0.707099              1.0             0.0   \n",
+      "1    0.000017  0.001580  0.924687  0.692873              1.0             1.0   \n",
+      "2    0.000017  0.002232  0.921030  0.695812              0.0             0.0   \n",
+      "3    0.000225  0.003004  0.949247  0.699897              1.0             0.0   \n",
+      "4    0.000001  0.004386  0.958276  0.673491              0.0             0.0   \n",
+      "\n",
+      "   muertos  heridos  time_ctrl  time_ext  ...  idprovincia_42  idprovincia_43  \\\n",
+      "0      0.0      0.0   0.000981  0.000302  ...             0.0             0.0   \n",
+      "1      0.0      0.0   0.001924  0.000510  ...             0.0             0.0   \n",
+      "2      0.0      0.0   0.000868  0.000274  ...             0.0             0.0   \n",
+      "3      0.0      0.0   0.002377  0.000736  ...             0.0             0.0   \n",
+      "4      0.0      0.0   0.000189  0.000104  ...             0.0             0.0   \n",
+      "\n",
+      "   idprovincia_44  idprovincia_45  idprovincia_46  idprovincia_47  \\\n",
+      "0             0.0             0.0             0.0             0.0   \n",
+      "1             0.0             0.0             0.0             0.0   \n",
+      "2             0.0             0.0             0.0             0.0   \n",
+      "3             0.0             0.0             0.0             0.0   \n",
+      "4             0.0             0.0             0.0             0.0   \n",
+      "\n",
+      "   idprovincia_48  idprovincia_49  idprovincia_50  idprovincia_51  \n",
+      "0             0.0             0.0             0.0             0.0  \n",
+      "1             0.0             0.0             0.0             0.0  \n",
+      "2             0.0             0.0             0.0             0.0  \n",
+      "3             0.0             0.0             0.0             0.0  \n",
+      "4             0.0             0.0             0.0             0.0  \n",
+      "\n",
+      "[5 rows x 118 columns]\n",
+      "         superficie         fecha           lat           lng  \\\n",
+      "count  82527.000000  82527.000000  82527.000000  82527.000000   \n",
+      "mean       0.000626      0.426784      0.872801      0.561137   \n",
+      "std        0.007171      0.300140      0.120021      0.110362   \n",
+      "min        0.000000      0.000000      0.000000      0.000000   \n",
+      "25%        0.000017      0.147503      0.814032      0.484766   \n",
+      "50%        0.000069      0.358686      0.911635      0.542965   \n",
+      "75%        0.000211      0.710038      0.960546      0.621662   \n",
+      "max        1.000000      1.000000      1.000000      1.000000   \n",
+      "\n",
+      "       latlng_explicit  causa_supuesta       muertos       heridos  \\\n",
+      "count     82527.000000    82527.000000  82527.000000  82527.000000   \n",
+      "mean          0.640808        0.562410      0.000063      0.000611   \n",
+      "std           0.479766        0.496093      0.004933      0.011927   \n",
+      "min           0.000000        0.000000      0.000000      0.000000   \n",
+      "25%           0.000000        0.000000      0.000000      0.000000   \n",
+      "50%           1.000000        1.000000      0.000000      0.000000   \n",
+      "75%           1.000000        1.000000      0.000000      0.000000   \n",
+      "max           1.000000        1.000000      1.000000      1.000000   \n",
+      "\n",
+      "          time_ctrl      time_ext  ...  idprovincia_42  idprovincia_43  \\\n",
+      "count  82527.000000  82527.000000  ...    82527.000000    82527.000000   \n",
+      "mean       0.001707      0.000818  ...        0.002702        0.003926   \n",
+      "std        0.007262      0.004503  ...        0.051912        0.062535   \n",
+      "min        0.000000      0.000000  ...        0.000000        0.000000   \n",
+      "25%        0.000475      0.000217  ...        0.000000        0.000000   \n",
+      "50%        0.000830      0.000359  ...        0.000000        0.000000   \n",
+      "75%        0.001501      0.000670  ...        0.000000        0.000000   \n",
+      "max        1.000000      1.000000  ...        1.000000        1.000000   \n",
+      "\n",
+      "       idprovincia_44  idprovincia_45  idprovincia_46  idprovincia_47  \\\n",
+      "count    82527.000000    82527.000000    82527.000000    82527.000000   \n",
+      "mean         0.002957        0.022356        0.006895        0.003938   \n",
+      "std          0.054295        0.147840        0.082748        0.062631   \n",
+      "min          0.000000        0.000000        0.000000        0.000000   \n",
+      "25%          0.000000        0.000000        0.000000        0.000000   \n",
+      "50%          0.000000        0.000000        0.000000        0.000000   \n",
+      "75%          0.000000        0.000000        0.000000        0.000000   \n",
+      "max          1.000000        1.000000        1.000000        1.000000   \n",
+      "\n",
+      "       idprovincia_48  idprovincia_49  idprovincia_50  idprovincia_51  \n",
+      "count    82527.000000    82527.000000    82527.000000    82527.000000  \n",
+      "mean         0.005937        0.044495        0.008724        0.000097  \n",
+      "std          0.076826        0.206192        0.092997        0.009845  \n",
+      "min          0.000000        0.000000        0.000000        0.000000  \n",
+      "25%          0.000000        0.000000        0.000000        0.000000  \n",
+      "50%          0.000000        0.000000        0.000000        0.000000  \n",
+      "75%          0.000000        0.000000        0.000000        0.000000  \n",
+      "max          1.000000        1.000000        1.000000        1.000000  \n",
+      "\n",
+      "[8 rows x 118 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "df.to_csv(\"noNaNDataFrame.csv\")\n",
     "print(df.head())\n",
