--- a/codi.ipynb
+++ b/codi.ipynb
@@ -20,7 +20,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "everything = False"
    ]
   },
   {
@@ -319,9 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['time_ctrl', 'time_ext', 'gastos', 'perdidas']\n",
-      "--- 1735.4437606334686 seconds ---\n",
-      "[]\n"
+      "['time_ctrl', 'time_ext', 'gastos', 'perdidas']\n"
      ]
     }
    ],
@@ -334,25 +334,41 @@
     "scaler = MinMaxScaler()\n",
     "df = pd.DataFrame(scaler.fit_transform(df), columns=df.columns)\n",
     "\n",
-    "# Separem el target\n",
-    "# X = df.drop(['superficie', 'idmunicipio', 'municipio'], axis=1)\n",
-    "# y = df['superficie']\n",
     "\n",
-    "#\n",
-    "# # # Apliquem KNN per tal d'emplenar els missing values\n",
-    "from sklearn.impute import KNNImputer\n",
-    "imputer = KNNImputer(n_neighbors=1,copy=False)\n",
-    "pd.DataFrame(imputer.fit_transform(df), columns=df.columns)\n",
+    "if everything:\n",
+    "    # # # Apliquem KNN per tal d'emplenar els missing values\n",
+    "    from sklearn.impute import KNNImputer\n",
+    "    imputer = KNNImputer(n_neighbors=1, copy=False)\n",
+    "    pd.DataFrame(imputer.fit_transform(df), columns=df.columns)\n",
     "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start))\n",
+    "    print(\"--- %s seconds ---\" % (time.time() - start))\n",
     "\n",
-    "df.describe()\n",
-    "print(df.columns[df.isnull().any()].tolist())"
+    "    df.describe()\n",
+    "    print(df.columns[df.isnull().any()].tolist())\n",
+    "\n",
+    "    df.to_csv(\"noNaNDataFrame.csv\")\n",
+    "    print(df.head())\n",
+    "    print(df.describe())\n",
+    "\n",
+    "df = pd.read_csv('noNaNDataFrame.csv', index_col=0)\n",
+    "df = pd.DataFrame(scaler.inverse_transform(df), columns=df.columns)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Feature Extraction"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -364,100 +380,153 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   superficie     fecha       lat       lng  latlng_explicit  causa_supuesta  \\\n",
-      "0    0.000093  0.001538  0.949757  0.707099              1.0             0.0   \n",
-      "1    0.000017  0.001580  0.924687  0.692873              1.0             1.0   \n",
-      "2    0.000017  0.002232  0.921030  0.695812              0.0             0.0   \n",
-      "3    0.000225  0.003004  0.949247  0.699897              1.0             0.0   \n",
-      "4    0.000001  0.004386  0.958276  0.673491              0.0             0.0   \n",
-      "\n",
-      "   muertos  heridos  time_ctrl  time_ext  ...  idprovincia_42  idprovincia_43  \\\n",
-      "0      0.0      0.0   0.000981  0.000302  ...             0.0             0.0   \n",
-      "1      0.0      0.0   0.001924  0.000510  ...             0.0             0.0   \n",
-      "2      0.0      0.0   0.000868  0.000274  ...             0.0             0.0   \n",
-      "3      0.0      0.0   0.002377  0.000736  ...             0.0             0.0   \n",
-      "4      0.0      0.0   0.000189  0.000104  ...             0.0             0.0   \n",
-      "\n",
-      "   idprovincia_44  idprovincia_45  idprovincia_46  idprovincia_47  \\\n",
-      "0             0.0             0.0             0.0             0.0   \n",
-      "1             0.0             0.0             0.0             0.0   \n",
-      "2             0.0             0.0             0.0             0.0   \n",
-      "3             0.0             0.0             0.0             0.0   \n",
-      "4             0.0             0.0             0.0             0.0   \n",
-      "\n",
-      "   idprovincia_48  idprovincia_49  idprovincia_50  idprovincia_51  \n",
-      "0             0.0             0.0             0.0             0.0  \n",
-      "1             0.0             0.0             0.0             0.0  \n",
-      "2             0.0             0.0             0.0             0.0  \n",
-      "3             0.0             0.0             0.0             0.0  \n",
-      "4             0.0             0.0             0.0             0.0  \n",
-      "\n",
-      "[5 rows x 118 columns]\n",
-      "         superficie         fecha           lat           lng  \\\n",
-      "count  82527.000000  82527.000000  82527.000000  82527.000000   \n",
-      "mean       0.000626      0.426784      0.872801      0.561137   \n",
-      "std        0.007171      0.300140      0.120021      0.110362   \n",
-      "min        0.000000      0.000000      0.000000      0.000000   \n",
-      "25%        0.000017      0.147503      0.814032      0.484766   \n",
-      "50%        0.000069      0.358686      0.911635      0.542965   \n",
-      "75%        0.000211      0.710038      0.960546      0.621662   \n",
-      "max        1.000000      1.000000      1.000000      1.000000   \n",
-      "\n",
-      "       latlng_explicit  causa_supuesta       muertos       heridos  \\\n",
-      "count     82527.000000    82527.000000  82527.000000  82527.000000   \n",
-      "mean          0.640808        0.562410      0.000063      0.000611   \n",
-      "std           0.479766        0.496093      0.004933      0.011927   \n",
-      "min           0.000000        0.000000      0.000000      0.000000   \n",
-      "25%           0.000000        0.000000      0.000000      0.000000   \n",
-      "50%           1.000000        1.000000      0.000000      0.000000   \n",
-      "75%           1.000000        1.000000      0.000000      0.000000   \n",
-      "max           1.000000        1.000000      1.000000      1.000000   \n",
-      "\n",
-      "          time_ctrl      time_ext  ...  idprovincia_42  idprovincia_43  \\\n",
-      "count  82527.000000  82527.000000  ...    82527.000000    82527.000000   \n",
-      "mean       0.001707      0.000818  ...        0.002702        0.003926   \n",
-      "std        0.007262      0.004503  ...        0.051912        0.062535   \n",
-      "min        0.000000      0.000000  ...        0.000000        0.000000   \n",
-      "25%        0.000475      0.000217  ...        0.000000        0.000000   \n",
-      "50%        0.000830      0.000359  ...        0.000000        0.000000   \n",
-      "75%        0.001501      0.000670  ...        0.000000        0.000000   \n",
-      "max        1.000000      1.000000  ...        1.000000        1.000000   \n",
-      "\n",
-      "       idprovincia_44  idprovincia_45  idprovincia_46  idprovincia_47  \\\n",
-      "count    82527.000000    82527.000000    82527.000000    82527.000000   \n",
-      "mean         0.002957        0.022356        0.006895        0.003938   \n",
-      "std          0.054295        0.147840        0.082748        0.062631   \n",
-      "min          0.000000        0.000000        0.000000        0.000000   \n",
-      "25%          0.000000        0.000000        0.000000        0.000000   \n",
-      "50%          0.000000        0.000000        0.000000        0.000000   \n",
-      "75%          0.000000        0.000000        0.000000        0.000000   \n",
-      "max          1.000000        1.000000        1.000000        1.000000   \n",
-      "\n",
-      "       idprovincia_48  idprovincia_49  idprovincia_50  idprovincia_51  \n",
-      "count    82527.000000    82527.000000    82527.000000    82527.000000  \n",
-      "mean         0.005937        0.044495        0.008724        0.000097  \n",
-      "std          0.076826        0.206192        0.092997        0.009845  \n",
-      "min          0.000000        0.000000        0.000000        0.000000  \n",
-      "25%          0.000000        0.000000        0.000000        0.000000  \n",
-      "50%          0.000000        0.000000        0.000000        0.000000  \n",
-      "75%          0.000000        0.000000        0.000000        0.000000  \n",
-      "max          1.000000        1.000000        1.000000        1.000000  \n",
-      "\n",
-      "[8 rows x 118 columns]\n"
+      "0         4.000000\n",
+      "1         0.872727\n",
+      "2         1.777778\n",
+      "3         1.074627\n",
+      "4        14.666667\n",
+      "           ...    \n",
+      "82522    24.761905\n",
+      "82523     9.363057\n",
+      "82524    13.043478\n",
+      "82525    22.352941\n",
+      "82526    11.473684\n",
+      "Name: PeoplePerHour, Length: 82527, dtype: float64\n",
+      "0        0.800000\n",
+      "1        0.218182\n",
+      "2        0.444444\n",
+      "3        0.179104\n",
+      "4        2.666667\n",
+      "           ...   \n",
+      "82522    2.857143\n",
+      "82523    0.955414\n",
+      "82524    1.739130\n",
+      "82525    4.705882\n",
+      "82526    1.017544\n",
+      "Name: MediosPerHour, Length: 82527, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "df.to_csv(\"noNaNDataFrame.csv\")\n",
-    "print(df.head())\n",
-    "print(df.describe())\n",
-    "\n",
-    "\n"
+    "df['PeoplePerHour'] = df.personal/(df.time_ctrl/60)\n",
+    "df['MediosPerHour'] = df.medios/(df.time_ctrl/60)\n",
+    "print(df['PeoplePerHour'])\n",
+    "print(df['MediosPerHour'])"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Linear Regression"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35304    20050726.0\n",
+      "35081    20050429.0\n",
+      "16815    20030320.0\n",
+      "34620    20050318.0\n",
+      "9547     20020322.0\n",
+      "            ...    \n",
+      "72459    20130726.0\n",
+      "55180    20090423.0\n",
+      "80991    20151219.0\n",
+      "57319    20100812.0\n",
+      "74533    20130910.0\n",
+      "Name: fecha, Length: 37046, dtype: float64\n",
+      "0.3255452480165425\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X = df.drop(\"superficie\", axis=1)\n",
+    "y = df[\"superficie\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.33, random_state=42)\n",
+    "\n",
+    "print(X_train['fecha'])\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "lr = LinearRegression(normalize=False, n_jobs=-1)\n",
+    "\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "y_val_predicted = lr.predict(X_val)\n",
+    "r2_score_lr = lr.score(X_val, y_val)\n",
+    "\n",
+    "print('Linear regression' ,r2_score_lr)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3242303459254017\n"
+     ]
+    }
+   ],
+   "source": [
+    "noOneHotXTrain = X_train.drop(X_train.filter(regex='^idprovincia').columns, axis=1)\n",
+    "noOneHotXVal = X_val.drop(X_val.filter(regex='^idprovincia').columns, axis=1)\n",
+    "noOneHotXTrain = noOneHotXTrain.drop(noOneHotXTrain.filter(regex='^causa_desc').columns, axis=1)\n",
+    "noOneHotXVal = noOneHotXVal.drop(noOneHotXVal.filter(regex='^causa_desc').columns, axis=1)\n",
+    "\n",
+    "lr = LinearRegression(normalize=False, n_jobs=-1)\n",
+    "\n",
+    "lr.fit(noOneHotXTrain, y_train)\n",
+    "\n",
+    "y_val_predicted = lr.predict(noOneHotXVal)\n",
+    "r2_score_lr = lr.score(noOneHotXVal, y_val)\n",
+    "\n",
+    "print('Linear regression without one hot encoding', r2_score_lr)\n",
+    "\n",
+    "# 0.3246299878844209"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## KNN\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
